Override the css overflow property of header to default value, to fix hidden drop down list bug

--- a/metashare/static/metashare/css/metashare-editor.css
+++ b/metashare/static/metashare/css/metashare-editor.css
@@ -22,6 +22,7 @@
 	-webkit-box-shadow: 0px  5px 10px #CCCCCC;
 	box-shadow: 0px 5px 10px #CCCCCC;
 	line-height: 1.5;
+	overflow: visible;
 }
 
 #container > div:nth-child(2){
